--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2",
     "react-syntax-highlighter": "^10.2.1",
     "xml-formatter": "^1.1.0"
   },
